@@ -1,3 +1,14 @@
+2011-01-30  Cameron Zwarich  <zwarich@apple.com>
+
+        Reviewed by Oliver Hunt.
+
+        JavaScriptCoreUseJIT environment variable broken
+        https://bugs.webkit.org/show_bug.cgi?id=53372
+
+        * runtime/JSGlobalData.cpp:
+        (JSC::JSGlobalData::JSGlobalData): Check the actual value in the string returned
+        by getenv() rather than just doing a NULL check on the return value.
+
 2011-01-29  Patrick Gansterer  <paroga@webkit.org>
 
         Reviewed by David Kilzer.
